--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/trivy-security.yml
 name: Trivy Security Repo scan
 
 on:
@@ -30,7 +29,7 @@ jobs:
       # SARIF (gates the build)
       - name: Trivy FS (SARIF, fail on HIGH/CRITICAL)
         id: trivy_fs_sarif
-        uses: aquasecurity/trivy-action@vmaster
+        uses: aquasecurity/trivy-action@master
         with:
           scan-type: fs
           scan-ref: .
@@ -45,7 +44,7 @@ jobs:
       # Human-readable table for logs + summary
       - name: Trivy FS (table report for summary)
         if: always()
-        uses: aquasecurity/trivy-action@vmaster
+        uses: aquasecurity/trivy-action@master
         with:
           scan-type: fs
           scan-ref: .
